<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ILBSoNe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="message_tab">消息</string>
	<string name="map_tab">地图</string>
	<string name="friend_tab">好友</string>
	<string name="me_tab">我</string>
	<string name="default_username">默认用户名</string>
	<string name="no_map_data">地图数据缺失</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="username">用户名</string>
	<string name="set">设置</string>
	<string name="help">帮助与反馈</string>
	<string name="logoff">退出登录</string>
	<string name="me_information">个人信息</string>
	<string name="user_img">头像</string>
	<string name="user_sex">性别</string>
	<string name="user_currentLocation">当前定位</string>
	<string name="currentLocation">(当前的位置)</string>
	<string name="about_us">关于我们</string>
	<string name="Ubiloc">Ubiloc</string>
	<string name="female">女</string>
	<string name="preference_setting">兴趣设置</string>
</resources>
