<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/my_info_background"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/my_info_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/item_background_black"
        >
      <ImageView
          android:id="@+id/leftarrow_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/left_arrow_white" />
      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background_black"
            android:layout_toRightOf="@id/leftarrow_img"
            android:layout_marginLeft="5dp"
            android:text="@string/me_tab"
            android:textColor="@color/snow"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background_black"
           android:layout_marginLeft="90dp"
            android:text="@string/help"
            android:textColor="@color/snow"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        style="@style/my_info_item_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
      <ImageView
          android:id="@+id/aboutus_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/ico_aboutus" />
        
        <TextView
            android:id="@+id/user_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/aboutus_img"
            android:layout_marginLeft="3dp" 
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="18sp" />
      


        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/right_arrow" />
    </RelativeLayout>


</LinearLayout>