<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/my_info_background"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/my_info_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_black"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background_black"
            android:text="@string/me_tab"
            android:textColor="@color/snow"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        style="@style/my_info_item_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/my_info_img"
            android:layout_width="@dimen/my_info_img_width"
            android:layout_height="@dimen/my_info_img_height"
            android:layout_marginLeft="3dp"
            android:background="@drawable/user_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/my_info_img"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/right_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/me_preference"
        style="@style/my_info_item_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/me_preference_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/me_preference" />

        <TextView
            android:id="@+id/me_preference_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/me_preference_img"
            android:background="@color/LightGreen"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/me_preference_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/me_preference_txt1"
            android:background="@color/pink"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/me_preference_txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/me_preference_txt2"
            android:background="@color/WhiteSmoke"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/right_arrow" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/my_info_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/setup_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/ico_setup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/setup_img"
            android:background="@drawable/item_background_gray"
            android:text="@string/set"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/right_arrow" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/my_info_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/help_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/ico_help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/help_img"
            android:background="@drawable/item_background_gray"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/right_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quit"
        style="@style/my_info_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/signout_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/ico_signout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/signout_img"
            android:background="@drawable/item_background_gray"
            android:text="@string/logoff"
            android:textColor="@color/black"
            android:textSize="18sp" />

       
    </RelativeLayout>

</LinearLayout>